--- a/static.conf
+++ b/static.conf
@@ -96,3 +96,10 @@ host ffpi-digilay {
 	hardware ethernet  B8:27:EB:06:C4:73;
 	fixed-address 10.172.5.1;
 }
+
+
+#Richtfunke Ubiquiti Markusberg
+host ubiquiti-markusberg {
+	hardware ethernet  80:2A:A8:64:D2:ED;
+	fixed-address 10.172.1.50;
+}
