--- a/static.conf
+++ b/static.conf
@@ -61,6 +61,12 @@ host mdos-esp {
 	fixed-address 10.172.3.1;
 }
 
+#Raspberry Pi 3 Maschinendeck Trier
+host maschinenpi {
+	hardware ethernet b8:27:eb:1c:21:60;
+	fixed-address 10.172.3.2;
+}
+
 #Raspberry Pi 1 Maschinendeck Trier
 host maschinendeckpi {
 	hardware ethernet  B8:27:EB:7E:AF:47;
