--- a/static.conf
+++ b/static.conf
@@ -1,5 +1,5 @@
 #Wichtig: bitte Netzplan beachten! (für möglichen Wechsel von bridged zu routed wichtig)
-#10.172.0.1 - 10.172.0.100 reserviert für Netzhardware 
+#10.172.0.1 - 10.172.0.100 reserviert für Netzhardware
 #10.172.1.1 - 10.172.2.254 für Richtfunkstrecken (Netzhardware ohne Batman-support)
 #10.172.3.1 - 10.172.5.254 für feste IP-Adressen über DHCP-Vergabe nutzbar
 
@@ -61,26 +61,14 @@ host vidister_ap_2 {
 
 ### feste IP-Adressen über DHCP-Vergabe ###
 
-#MDOS ESP
-host mdos-esp {
-	hardware ethernet 1a:fe:34:f5:dd:c9;
-	fixed-address 10.172.3.1;
-}
-
 #Raspberry Pi 3 Maschinendeck Trier
 host maschinenpi {
 	hardware ethernet b8:27:eb:1c:21:60;
 	fixed-address 10.172.3.2;
 }
 
-#MDOS ESP2
-host mdos-esp2 {
-	hardware ethernet 18:fe:34:f5:dd:c9;
-	fixed-address 10.172.3.3;
-}
-
 #Raspberry Pi 1 Maschinendeck Trier
-host maschinendeckpi {
+host maschinentuer {
 	hardware ethernet  B8:27:EB:7E:AF:47;
 	fixed-address 10.172.3.42;
 }
@@ -103,7 +91,7 @@ host Freifunk-Besslich {
 	fixed-address 10.172.4.1;
 }
 
-#FF-Pi Digilay in Besslich 
+#FF-Pi Digilay in Besslich
 host ffpi-digilay {
 	hardware ethernet  B8:27:EB:06:C4:73;
 	fixed-address 10.172.5.1;
