insert an ip for my server

--- a/static.conf
+++ b/static.conf
@@ -67,6 +67,12 @@ host maschinenpi {
 	fixed-address 10.172.3.2;
 }
 
+#gtrs server
+host phara {
+	hardware ethernet  F2:D7:B6:6B:4F:56;
+	fixed-address 10.172.3.23;
+}
+
 #Raspberry Pi 1 Maschinendeck Trier
 host maschinentuer {
 	hardware ethernet  B8:27:EB:7E:AF:47;
