--- a/static.conf
+++ b/static.conf
@@ -102,3 +102,9 @@ host ffpi-digilay {
 	hardware ethernet  B8:27:EB:06:C4:73;
 	fixed-address 10.172.5.1;
 }
+
+#Maschinendecks Pizzacam
+host kantinendeck {
+	hardware ethernet  00:07:5F:82:9C:7A;
+	fixed-address 10.172.3.141;
+}
