Ordnung muss sein!

--- a/static.conf
+++ b/static.conf
@@ -91,6 +91,12 @@ host aurora {
 	fixed-address 10.172.3.128;
 }
 
+#Maschinendecks Pizzacam
+host kantinendeck {
+	hardware ethernet  00:07:5F:82:9C:7A;
+	fixed-address 10.172.3.141;
+}
+
 #DD-WRT Router in Besslich for some internal services
 host Freifunk-Besslich {
 	hardware ethernet 00:26:5A:B1:79:ED;
