+Fallback Schließsystem Maschinendeck Trier

--- a/static.conf
+++ b/static.conf
@@ -85,6 +85,12 @@ host jenkins {
 	fixed-address 10.172.3.43;
 }
 
+#Fallback Schließsystem Maschinendeck Trier
+host maschinentuer-fallback {
+	hardware ethernet  b8:27:eb:54:17:33;
+	fixed-address 10.172.3.44;
+}
+
 #Vidisters Homeserver
 host aurora {
 	hardware ethernet  74:D4:35:AB:E2:92;
