--- a/static.conf
+++ b/static.conf
@@ -86,7 +86,7 @@ host jenkins {
 }
 
 #Fallback Schließsystem Maschinendeck Trier
-host maschinentuer-fallback {
+host backdoor {
 	hardware ethernet  b8:27:eb:54:17:33;
 	fixed-address 10.172.3.44;
 }
