--- a/static.conf
+++ b/static.conf
@@ -25,6 +25,11 @@
 #	fixed-address 10.172.0.14;
 #}
 
+#host neso {
+#	hardware ethernet :::::;
+#	fixed-address 10.172.0.15;
+#}
+
 ### Richtfunkstrecken (Netzhardware ohne Batman-support) ###
 
 #Nanobridge M5 in Leiwen (Zummet)
