--- a/static.conf
+++ b/static.conf
@@ -98,8 +98,14 @@ host backdoor {
 
 #Vidisters Homeserver
 host aurora {
-	hardware ethernet  74:D4:35:AB:E2:92;
+	hardware ethernet 74:D4:35:AB:E2:92;
 	fixed-address 10.172.3.128;
+}
+
+#Vidisters Remoteserver
+host neptun {
+	hardware ethernet be:df:67:51:6d:69;
+	fixed-address 10.172.3.129;
 }
 
 #Maschinendecks Pizzacam
