--- a/static.conf
+++ b/static.conf
@@ -72,6 +72,13 @@ host maschinenpi {
 	fixed-address 10.172.3.2;
 }
 
+# großes Matepad Maschinendeck Trier
+# Rasbery Pi 2
+host mate {
+	hardware ethernet 74:da:38:62:1e:63;	
+	fixed-address 10.172.3.17;
+}
+
 #gtrs server
 host phara {
 	hardware ethernet  F2:D7:B6:6B:4F:56;
