--- a/static.conf
+++ b/static.conf
@@ -87,7 +87,8 @@ host phara {
 
 #Raspberry Pi 1 Maschinendeck Trier
 host maschinentuer {
-	hardware ethernet  B8:27:EB:7E:AF:47;
+#	hardware ethernet  B8:27:EB:7E:AF:47;
+	hardware ethernet ec:08:6b:0b:fa:4b;
 	fixed-address 10.172.3.42;
 }
 
