--- a/static.conf
+++ b/static.conf
@@ -73,6 +73,12 @@ host maschinentuer {
 	fixed-address 10.172.3.42;
 }
 
+# Raspberry Pi 3 Maschinendeck Trier Infobeamer
+host maschinenstatus {
+	hardware ethernet  b8:27:eb:9a:5d:16;
+	fixed-address 10.172.3.21;
+}
+
 #Jenkins
 host jenkins {
 	hardware ethernet  52:54:00:94:60:99;
