--- a/static.conf
+++ b/static.conf
@@ -75,7 +75,7 @@ host maschinenpi {
 # großes Matepad Maschinendeck Trier
 # Rasbery Pi 2
 host mate {
-	hardware ethernet 74:da:38:62:1e:63;	
+	hardware ethernet 74:da:38:62:1e:63;
 	fixed-address 10.172.3.17;
 }
 
@@ -90,6 +90,12 @@ host maschinentuer {
 #	hardware ethernet  B8:27:EB:7E:AF:47;
 	hardware ethernet ec:08:6b:0b:fa:4b;
 	fixed-address 10.172.3.42;
+}
+
+# Raspberry Pi 3 Maschinendeck Trier Infobeamer
+host maschinenstatus {
+	hardware ethernet  b8:27:eb:9a:5d:16;
+	fixed-address 10.172.3.21;
 }
 
 #Jenkins
