add info for rogan und glubit

--- a/static.conf
+++ b/static.conf
@@ -10,7 +10,7 @@
 #	fixed-address 10.172.0.11;
 #}
 
-#host ankerstich {
+#host rogan {
 #	hardware ethernet :::::;
 #	fixed-address 10.172.0.12;
 #}
@@ -29,6 +29,12 @@
 #	hardware ethernet :::::;
 #	fixed-address 10.172.0.15;
 #}
+
+#host glubit {
+#	hardware ethernet :::::;
+#	fixed-address 10.172.0.16;
+#}
+
 
 ### Richtfunkstrecken (Netzhardware ohne Batman-support) ###
 
