add fix ip @ y0sh
jetzt aber richtig :-)
name und mac angepasst

--- a/static.conf
+++ b/static.conf
@@ -135,8 +135,8 @@ host kantinendeck {
 }
 
 #y0sh's Server
-host server.interent.y0sh.net {
-	hardware ethernet  0A:E8:FD:AC:46:A7
+host y0sh-server {
+	hardware ethernet  0A:E8:FD:AC:46:A7;
 	fixed-address 10.172.3.222;
 }
 
