--- a/static.conf
+++ b/static.conf
@@ -1,4 +1,4 @@
-10.172.5.254 #Wichtig: bitte Netzplan beachten! (für möglichen Wechsel von bridged zu routed wichtig)
+#Wichtig: bitte Netzplan beachten! (für möglichen Wechsel von bridged zu routed wichtig)
 #10.172.0.1 - 10.172.0.100 reserviert für Netzhardware
 #10.172.1.1 - 10.172.2.254 für Richtfunkstrecken (Netzhardware ohne Batman-support)
 #10.172.3.1 - 10.172.5.254 für feste IP-Adressen über DHCP-Vergabe nutzbar
