--- a/static.conf
+++ b/static.conf
@@ -1,7 +1,17 @@
 #Wichtig: bitte Netzplan beachten! (für möglichen Wechsel von bridged zu routed wichtig)
-#10.172.0.1 - 10.172.0.100 reserviert für Netzhardware
-#10.172.1.1 - 10.172.2.254 für Richtfunkstrecken (Netzhardware ohne Batman-support)
-#10.172.3.1 - 10.172.5.254 für feste IP-Adressen über DHCP-Vergabe nutzbar
+# Wir haben nun bis zu 16 Segmente mit entsprechenden IPv4-Ranges
+# Seg_00 10.172.0.0 - 10.172.15.255
+# seg_01 10.172.16.0 - 10.172.31.255
+# seg_02 10.172.32.0 - 10.172.47.255
+# seg_03 10.172.48.0 - 10.172.65.255
+# seg_04 10.172.64.0 - 10.172.79.255
+# seg_05 10.172.80.0 - 10.172.95.255
+# die folgenden Ranges sind noch nicht vergeben
+# die ersten 255 Adressen eines jeden Segments werden nicht dynamsch vergeben
+# Bestehende Adressen dieser Liste liegen derzeit alle im 1. Segment_00 
+# Die static-Adressen hier werden vom DHCP-Server aus dem dynamic-Pool heraus genommen. (hoffe ich mal)
+# Sollte also jemand aus seg_05 sein Gerät ansprechen wollen, muss auch die feste IPv4 in das Segment_05 umgezogen werden.
+
 
 ### Netzhardware ###
 
