--- a/static.conf
+++ b/static.conf
@@ -45,6 +45,11 @@
 #	fixed-address 10.172.0.16;
 #}
 
+#host pegol {
+#	hardware ethernet :::::;
+#	fixed-address 10.172.0.19;
+#}
+
 
 ### Richtfunkstrecken (Netzhardware ohne Batman-support) ###
 
