add Olunia-85 with fixed-address 10.172.0.110

--- a/static.conf
+++ b/static.conf
@@ -166,3 +166,8 @@ host ffpi-digilay {
 	hardware ethernet  B8:27:EB:06:C4:73;
 	fixed-address 10.172.5.1;
 }
+
+host olunia-85 {
+   hardware ethernet E8:94:F6:68:2E:56;
+   fixed-address 10.172.0.110;
+}
