--- a/static.conf
+++ b/static.conf
@@ -6,8 +6,8 @@
 # seg_03 10.172.48.0 - 10.172.65.255
 # seg_04 10.172.64.0 - 10.172.79.255
 # seg_05 10.172.80.0 - 10.172.95.255
-# die folgenden Ranges sind noch nicht vergeben
-# die ersten 255 Adressen eines jeden Segments werden nicht dynamsch vergeben
+# Die dann folgenden Ranges sind noch nicht vergeben.
+# Die ersten 255 Adressen eines jeden Segments werden nicht dynamisch vergeben. Diese sollen in erster Linie für Infrastruktur genutzt werden.
 # Bestehende Adressen dieser Liste liegen derzeit alle im 1. Segment_00 
 # Die static-Adressen hier werden vom DHCP-Server aus dem dynamic-Pool heraus genommen. (hoffe ich mal)
 # Sollte also jemand aus seg_05 sein Gerät ansprechen wollen, muss auch die feste IPv4 in das Segment_05 umgezogen werden.
