cleanup fixed addresses

--- a/static.conf
+++ b/static.conf
@@ -55,119 +55,119 @@
 
 #Nanobridge M5 in Leiwen (Zummet)
 #Part of the Trittenheim Backbone
-host Nanobridge_Kirsten1 {
-	hardware ethernet 00:27:22:35:24:F0;
-	fixed-address 10.172.1.40;
-}
+#host Nanobridge_Kirsten1 {
+#	hardware ethernet 00:27:22:35:24:F0;
+#	fixed-address 10.172.1.40;
+#}
 
 #Nanobridge M5 in Trittenheim
 #Part of the Trittenheim Backbone
-host Nanobridge_Kirsten2 {
-	hardware ethernet 00:27:22:34:24:B7;
-	fixed-address 10.172.1.41;
-}
+#host Nanobridge_Kirsten2 {
+#	hardware ethernet 00:27:22:34:24:B7;
+#	fixed-address 10.172.1.41;
+#}
 
 #Richtfunke Ubiquiti Markusberg
-host ubiquiti-markusberg {
-	hardware ethernet  80:2A:A8:65:D2:ED;
-	fixed-address 10.172.1.50;
-}
+#host ubiquiti-markusberg {
+#	hardware ethernet  80:2A:A8:65:D2:ED;
+#	fixed-address 10.172.1.50;
+#}
 
 #Vidisters Event 5GHz AP 1
-host vidister_ap_1 {
-	hardware ethernet  60:E3:27:72:48:EA;
-	fixed-address 10.172.1.120;
-}
+#host vidister_ap_1 {
+#	hardware ethernet  60:E3:27:72:48:EA;
+#	fixed-address 10.172.1.120;
+#}
 
 #Vidisters Event 5GHz AP 2
-host vidister_ap_2 {
-	hardware ethernet  60:E3:27:72:37:72;
-	fixed-address 10.172.1.121;
-}
+#host vidister_ap_2 {
+#	hardware ethernet  60:E3:27:72:37:72;
+#	fixed-address 10.172.1.121;
+#}
 
 ### feste IP-Adressen über DHCP-Vergabe ###
 
 #Raspberry Pi 3 Maschinendeck Trier
-host maschinenpi {
-	hardware ethernet b8:27:eb:1c:21:60;
-	fixed-address 10.172.3.2;
-}
+#host maschinenpi {
+#	hardware ethernet b8:27:eb:1c:21:60;
+#	fixed-address 10.172.3.2;
+#}
 
 # großes Matepad Maschinendeck Trier
 # Rasbery Pi 2
-host mate {
-	hardware ethernet 74:da:38:62:1e:63;
-	fixed-address 10.172.3.17;
-}
+#host mate {
+#	hardware ethernet 74:da:38:62:1e:63;
+#	fixed-address 10.172.3.17;
+#}
 
 # Raspberry Pi 3 Maschinendeck Trier Infobeamer
-host maschinenstatus {
-	hardware ethernet  b8:27:eb:9a:5d:16;
-	fixed-address 10.172.3.21;
-}
+#host maschinenstatus {
+#	hardware ethernet  b8:27:eb:9a:5d:16;
+#	fixed-address 10.172.3.21;
+#}
 
 #gtrs server
-host phara {
-	hardware ethernet  F2:D7:B6:6B:4F:56;
-	fixed-address 10.172.3.23;
-}
+#host phara {
+#	hardware ethernet  F2:D7:B6:6B:4F:56;
+#	fixed-address 10.172.3.23;
+#}
 
 #Raspberry Pi 1 Maschinendeck Trier
-host maschinentuer {
-#	hardware ethernet  B8:27:EB:7E:AF:47;
-	hardware ethernet ec:08:6b:0b:fa:4b;
-	fixed-address 10.172.3.42;
-}
+#host maschinentuer {
+ #	hardware ethernet  B8:27:EB:7E:AF:47;
+#	hardware ethernet ec:08:6b:0b:fa:4b;
+#	fixed-address 10.172.3.42;
+#}
 
 #Jenkins
-host jenkins {
-	hardware ethernet  52:54:00:94:60:99;
-	fixed-address 10.172.3.43;
-}
+#host jenkins {
+#	hardware ethernet  52:54:00:94:60:99;
+#	fixed-address 10.172.3.43;
+#}
 
 #Fallback Schließsystem Maschinendeck Trier
-host backdoor {
-	hardware ethernet  b8:27:eb:54:17:33;
-	fixed-address 10.172.3.44;
-}
+#host backdoor {
+#	hardware ethernet  b8:27:eb:54:17:33;
+#	fixed-address 10.172.3.44;
+#}
 
 #Vidisters Homeserver
-host aurora {
-	hardware ethernet 74:D4:35:AB:E2:92;
-	fixed-address 10.172.3.128;
-}
+#host aurora {
+#	hardware ethernet 74:D4:35:AB:E2:92;
+#	fixed-address 10.172.3.128;
+#}
 
 #Vidisters Remoteserver
-host neptun {
-	hardware ethernet be:df:67:51:6d:69;
-	fixed-address 10.172.3.129;
-}
+#host neptun {
+#	hardware ethernet be:df:67:51:6d:69;
+#	fixed-address 10.172.3.129;
+#}
 
 #Maschinendecks Pizzacam
-host kantinendeck {
-	hardware ethernet  00:07:5F:82:9C:7A;
-	fixed-address 10.172.3.141;
-}
+#host kantinendeck {
+#	hardware ethernet  00:07:5F:82:9C:7A;
+#	fixed-address 10.172.3.141;
+#}
 
 #y0sh's Server
-host y0sh-server {
-	hardware ethernet  0A:E8:FD:AC:46:A7;
-	fixed-address 10.172.3.222;
-}
+#host y0sh-server {
+#	hardware ethernet  0A:E8:FD:AC:46:A7;
+#	fixed-address 10.172.3.222;
+#}
 
 #DD-WRT Router in Besslich for some internal services
-host Freifunk-Besslich {
-	hardware ethernet 00:26:5A:B1:79:ED;
-	fixed-address 10.172.4.1;
-}
+#host Freifunk-Besslich {
+#	hardware ethernet 00:26:5A:B1:79:ED;
+#	fixed-address 10.172.4.1;
+#}
 
 #FF-Pi Digilay in Besslich
 host ffpi-digilay {
 	hardware ethernet  B8:27:EB:06:C4:73;
-	fixed-address 10.172.5.1;
+	fixed-address 10.172.16.1;
 }
 
-host olunia-85 {
-   hardware ethernet E8:94:F6:68:2E:56;
-   fixed-address 10.172.0.110;
-}
+#host olunia-85 {
+#   hardware ethernet E8:94:F6:68:2E:56;
+#   fixed-address 10.172.0.110;
+#}
