new static IP in Seg_03

--- a/static.conf
+++ b/static.conf
@@ -11,7 +11,12 @@
 # Bestehende Adressen dieser Liste liegen derzeit alle im 1. Segment_00 
 # Die static-Adressen hier werden vom DHCP-Server aus dem dynamic-Pool heraus genommen. (hoffe ich mal)
 # Sollte also jemand aus seg_05 sein Gerät ansprechen wollen, muss auch die feste IPv4 in das Segment_05 umgezogen werden.
-
+# IP-Bereiche:
+# 1-9 Hosts mit Netzmonitor-Funktionen
+# 10 - 20 für GWs
+# 21 - 50 Infrastruktur
+# 51 - 149 Customer ohne Antrag (first-come, first-serve)
+# 150 - 254 auf Antrag (Verpflichtung zur Freigabe, sobald 3 Monate ungenutzt)
 
 ### Netzhardware ###
 
@@ -171,3 +176,10 @@ host ffpi-digilay {
 #   hardware ethernet E8:94:F6:68:2E:56;
 #   fixed-address 10.172.0.110;
 #}
+
+# Walter Thyssen
+host Web-cam1 {
+   hardware ethernet E0:50:8B:32:03:51
+   fixed-address 10.172.48.51;
+}
+   
