--- a/static.conf
+++ b/static.conf
@@ -179,7 +179,7 @@ host ffpi-digilay {
 
 # Walter Thyssen
 host Web-cam1 {
-   hardware ethernet E0:50:8B:32:03:51
+   hardware ethernet E0:50:8B:32:03:51;
    fixed-address 10.172.48.51;
 }
    
