Removed one device, added one device, kept hostname
Removed one device, added one device, kept hostname.
New device an ESP 32 Heltec LoRa.

--- a/static.conf
+++ b/static.conf
@@ -172,10 +172,11 @@ host ffpi-digilay {
 	fixed-address 10.172.16.1;
 }
 
-#host olunia-85 {
-#   hardware ethernet E8:94:F6:68:2E:56;
-#   fixed-address 10.172.0.110;
-#}
+#IoT-Device Heltec ESP32 LoRa
+host olunia-85 {
+   hardware ethernet 30:AE:A4:4C:43:F4;
+   fixed-address 10.172.32.51;
+}
 
 # Walter Thyssen
 host Web-cam1 {
