Added Pi LoRaWAN-Gateway
Raspberry Pi working as a LoRaWAN-Gateway

--- a/static.conf
+++ b/static.conf
@@ -8,7 +8,7 @@
 # seg_05 10.172.80.0 - 10.172.95.255
 # Die dann folgenden Ranges sind noch nicht vergeben.
 # Die ersten 255 Adressen eines jeden Segments werden nicht dynamisch vergeben. Diese sollen in erster Linie für Infrastruktur genutzt werden.
-# Bestehende Adressen dieser Liste liegen derzeit alle im 1. Segment_00 
+# Bestehende Adressen dieser Liste liegen derzeit alle im 1. Segment_00
 # Die static-Adressen hier werden vom DHCP-Server aus dem dynamic-Pool heraus genommen. (hoffe ich mal)
 # Sollte also jemand aus seg_05 sein Gerät ansprechen wollen, muss auch die feste IPv4 in das Segment_05 umgezogen werden.
 # IP-Bereiche:
@@ -172,10 +172,16 @@ host ffpi-digilay {
 	fixed-address 10.172.16.1;
 }
 
-#IoT-Device Heltec ESP32 LoRa
-host olunia-85 {
-   hardware ethernet 30:AE:A4:4C:43:F4;
+#Pi LoRaWAN-Gateway
+host olunia-1 {
+   hardware ethernet B8:27:EB:32:CE:E9;
    fixed-address 10.172.32.51;
+}
+
+#IoT-Device Heltec ESP32 LoRa
+host olunia-2 {
+   hardware ethernet 30:AE:A4:4C:43:F4;
+   fixed-address 10.172.32.52;
 }
 
 # Walter Thyssen
@@ -183,4 +189,3 @@ host Web-cam1 {
    hardware ethernet E0:50:8B:32:03:51;
    fixed-address 10.172.48.51;
 }
-   
