--- a/static.conf
+++ b/static.conf
@@ -168,6 +168,14 @@
 
 ################## seg_00 10.172.0.0 - 10.172.15.255
 
+#Raspberry Pi 1 Maschinendeck Trier
+
+host maschinentuer {
+ #	hardware ethernet  B8:27:EB:7E:AF:47;
+	hardware ethernet ec:08:6b:0b:fa:4b;
+	fixed-address 10.172.0.51;
+}
+
 
 ################## seg_01 10.172.16.0 - 10.172.31.255
 
