re-activate gtrs's server

--- a/static.conf
+++ b/static.conf
@@ -110,12 +110,6 @@
 #	fixed-address 10.172.3.21;
 #}
 
-#gtrs server
-#host phara {
-#	hardware ethernet  F2:D7:B6:6B:4F:56;
-#	fixed-address 10.172.3.23;
-#}
-
 #Raspberry Pi 1 Maschinendeck Trier
 #host maschinentuer {
  #	hardware ethernet  B8:27:EB:7E:AF:47;
@@ -174,6 +168,13 @@ host maschinentuer {
 	hardware ethernet ec:08:6b:0b:fa:4b;
 	fixed-address 10.172.0.51;
 }
+
+#gtrs's server
+host pellene {
+	hardware ethernet 66:A9:12:29:F2:9F;
+	fixed-address 10.172.0.52;
+}
+
 
 
 ################## seg_01 10.172.16.0 - 10.172.31.255
