--- a/static.conf
+++ b/static.conf
@@ -54,6 +54,11 @@
 #	fixed-address 10.172.0.19;
 #}
 
+#host rustig {
+#	hardware ethernet :::::;
+#	fixed-address 10.172.0.21;
+#}
+
 
 ### Richtfunkstrecken (Netzhardware ohne Batman-support) ###
 
