Add SRV-AYL-0 to static IPv4

--- a/static.conf
+++ b/static.conf
@@ -219,6 +219,14 @@ host Web-cam1 {
    fixed-address 10.172.48.51;
 }
 
+# Christoph Franzen
+# Router GW-FFTR-Alte-Pflasterei: 00:14:BF:16:22:AB
+host SRV-AYL-0 {
+   hardware ethernet C8:1F:66:C0:3A:94;
+   fixed-address 10.172.48.149;
+}
+
+
 ################## seg_04 10.172.64.0 - 10.172.79.255
 
 
