--- a/static.conf
+++ b/static.conf
@@ -220,10 +220,17 @@ host Web-cam1 {
 }
 
 # Christoph Franzen
-# Router GW-FFTR-Alte-Pflasterei: 00:14:BF:16:22:AB
+# Router SRV-AYL-0
 host SRV-AYL-0 {
    hardware ethernet C8:1F:66:C0:3A:94;
    fixed-address 10.172.48.149;
+}
+
+# Christoph Franzen
+# Router GW-FFTR-Alte-Pflasterei: 00:14:BF:16:22:AB
+host GW-FFTR-Alte-Pflasterei {
+   hardware ethernet 00:14:BF:16:22:AB;
+   fixed-address 10.172.48.148;
 }
 
 
