--- a/static.conf
+++ b/static.conf
@@ -213,6 +213,12 @@ host unifi {
    fixed-address 10.172.48.31;
 }
 
+# Raspberry Pi Bürgerhaus Hetzerath
+host fftrhzpi {
+   hardware ethernet B8:27:EB:08:36:55;
+   fixed-address 10.172.48.32;
+}
+
 # Walter Thyssen
 host Web-cam1 {
    hardware ethernet E0:50:8B:32:03:51;
@@ -238,4 +244,3 @@ host GW-FFTR-Alte-Pflasterei {
 
 
 ################## seg_05 10.172.80.0 - 10.172.95.255
-
