--- a/static.conf
+++ b/static.conf
@@ -62,37 +62,6 @@
 
 ### Richtfunkstrecken (Netzhardware ohne Batman-support) ###
 
-#Nanobridge M5 in Leiwen (Zummet)
-#Part of the Trittenheim Backbone
-#host Nanobridge_Kirsten1 {
-#	hardware ethernet 00:27:22:35:24:F0;
-#	fixed-address 10.172.1.40;
-#}
-
-#Nanobridge M5 in Trittenheim
-#Part of the Trittenheim Backbone
-#host Nanobridge_Kirsten2 {
-#	hardware ethernet 00:27:22:34:24:B7;
-#	fixed-address 10.172.1.41;
-#}
-
-#Richtfunke Ubiquiti Markusberg
-#host ubiquiti-markusberg {
-#	hardware ethernet  80:2A:A8:65:D2:ED;
-#	fixed-address 10.172.1.50;
-#}
-
-#Vidisters Event 5GHz AP 1
-#host vidister_ap_1 {
-#	hardware ethernet  60:E3:27:72:48:EA;
-#	fixed-address 10.172.1.120;
-#}
-
-#Vidisters Event 5GHz AP 2
-#host vidister_ap_2 {
-#	hardware ethernet  60:E3:27:72:37:72;
-#	fixed-address 10.172.1.121;
-#}
 
 ### feste IP-Adressen über DHCP-Vergabe ###
 
@@ -102,67 +71,6 @@
 #	fixed-address 10.172.3.2;
 #}
 
-# großes Matepad Maschinendeck Trier
-# Rasbery Pi 2
-#host mate {
-#	hardware ethernet 74:da:38:62:1e:63;
-#	fixed-address 10.172.3.17;
-#}
-
-# Raspberry Pi 3 Maschinendeck Trier Infobeamer
-#host maschinenstatus {
-#	hardware ethernet  b8:27:eb:9a:5d:16;
-#	fixed-address 10.172.3.21;
-#}
-
-#Raspberry Pi 1 Maschinendeck Trier
-#host maschinentuer {
- #	hardware ethernet  B8:27:EB:7E:AF:47;
-#	hardware ethernet ec:08:6b:0b:fa:4b;
-#	fixed-address 10.172.3.42;
-#}
-
-#Jenkins
-#host jenkins {
-#	hardware ethernet  52:54:00:94:60:99;
-#	fixed-address 10.172.3.43;
-#}
-
-#Fallback Schließsystem Maschinendeck Trier
-#host backdoor {
-#	hardware ethernet  b8:27:eb:54:17:33;
-#	fixed-address 10.172.3.44;
-#}
-
-#Vidisters Homeserver
-#host aurora {
-#	hardware ethernet 74:D4:35:AB:E2:92;
-#	fixed-address 10.172.3.128;
-#}
-
-#Vidisters Remoteserver
-#host neptun {
-#	hardware ethernet be:df:67:51:6d:69;
-#	fixed-address 10.172.3.129;
-#}
-
-#Maschinendecks Pizzacam
-#host kantinendeck {
-#	hardware ethernet  00:07:5F:82:9C:7A;
-#	fixed-address 10.172.3.141;
-#}
-
-#y0sh's Server
-#host y0sh-server {
-#	hardware ethernet  0A:E8:FD:AC:46:A7;
-#	fixed-address 10.172.3.222;
-#}
-
-#DD-WRT Router in Besslich for some internal services
-#host Freifunk-Besslich {
-#	hardware ethernet 00:26:5A:B1:79:ED;
-#	fixed-address 10.172.4.1;
-#}
 
 
 ################## seg_00 10.172.0.0 - 10.172.15.255
@@ -181,14 +89,13 @@ host pellene {
 }
 
 
-
 ################## seg_01 10.172.16.0 - 10.172.31.255
 
 #FF-Pi Digilay in Besslich
-host ffpi-digilay {
-	hardware ethernet  B8:27:EB:06:C4:73;
-	fixed-address 10.172.16.1;
-}
+#host ffpi-digilay {
+#	hardware ethernet  B8:27:EB:06:C4:73;
+#	fixed-address 10.172.16.1;
+#}
 
 
 ################## seg_02 10.172.32.0 - 10.172.47.255
@@ -226,6 +133,13 @@ host Web-cam1 {
 }
 
 # Christoph Franzen
+# Router GW-FFTR-Alte-Pflasterei: 00:14:BF:16:22:AB
+host GW-FFTR-Alte-Pflasterei {
+   hardware ethernet 00:14:BF:16:22:AB;
+   fixed-address 10.172.48.148;
+}
+
+# Christoph Franzen
 # Router SRV-AYL-0
 host SRV-AYL-0 {
    hardware ethernet C8:1F:66:C0:3A:94;
@@ -233,10 +147,9 @@ host SRV-AYL-0 {
 }
 
 # Christoph Franzen
-# Router GW-FFTR-Alte-Pflasterei: 00:14:BF:16:22:AB
-host GW-FFTR-Alte-Pflasterei {
-   hardware ethernet 00:14:BF:16:22:AB;
-   fixed-address 10.172.48.148;
+host cf_vm {
+    hardware ethernet 00:90:7F:30:48:FB;
+    fixed-address 10.172.48.150;
 }
 
 
