add an other static IP for Christoph

--- a/static.conf
+++ b/static.conf
@@ -152,6 +152,12 @@ host cf_vm {
     fixed-address 10.172.48.150;
 }
 
+# Christoph Franzen
+host FF-AYL-6 {
+    hardware ethernet 00:15:0C:52:9C:0F;
+    fixed-address 10.172.48.151;
+}
+
 
 ################## seg_04 10.172.64.0 - 10.172.79.255
 
